// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inquirerer checkbox 1`] = `
{
  "checkbox": [
    {
      "name": "b",
      "value": true,
    },
    {
      "name": "c",
      "value": true,
    },
  ],
}
`;

exports[`Inquirerer checkbox w/options 1`] = `
{
  "checkbox": [
    {
      "name": "a",
      "value": false,
    },
    {
      "name": "b",
      "value": true,
    },
    {
      "name": "c",
      "value": true,
    },
  ],
}
`;

exports[`Inquirerer handles autocomplete selection with key events 1`] = `
[
  "c",
  "autocompleteField:
> 
",
  "[34m> first option[39m
",
  "  second option
",
  "  third option
",
  "c",
  "autocompleteField:
> 
",
  "  first option
",
  "[34m> second option[39m
",
  "  third option
",
]
`;

exports[`Inquirerer handles autocomplete selection with key events 2`] = `
[
  "[B",
  "
",
]
`;

exports[`Inquirerer handles multiple questions 1`] = `
[
  "c",
  "c",
]
`;

exports[`Inquirerer handles multiple questions 2`] = `[]`;

exports[`Inquirerer prompts user and correctly processes delayed input 1`] = `
[
  "c",
]
`;

exports[`Inquirerer prompts user and correctly processes delayed input 2`] = `[]`;
